# scout

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 0a8e737074f5_resize_embedding_vector_768_to_3072.py  27b2a086786d_init_listings_caches.py  71d0019968ac_add_users_events.py  941100c9d6c7_drop_redundant_matches_standalone_.py  beee0bd92f29_add_matches_table.py
apps/api/: main.py  router_admin.py
apps/bot/: keyboards.py  main.py  messages.py  states.py
apps/shared/: config.py  db.py  enums.py  feedback.py  kpi.py  models.py  phone.py  telegram_send.py
apps/workers/: celery_app.py
docs/runbooks/: plan-1-smoke.md
infra/: nginx.conf
tests/: conftest.py
tests/fixtures/: cbu_rate.json  gemini_classify_owner.json  olx_detail_agent.html  olx_detail_owner.html  olx_list_long_term.html  yandex_geocode_yunusabad.json
tests/integration/: test_e2e_pipeline.py  test_listing_round_trip.py  test_playwright_phone.py
tests/unit/: test_admin_auth.py  test_api_health.py  test_beat_schedule_plan3.py  test_beat_schedule_plan4.py  test_celery_smoke.py  test_classify.py  test_coldstart.py  test_commands.py  test_config.py  test_currency.py  test_db.py  test_dedup_tiered.py  test_digest_task.py  test_embed.py  test_enums.py  test_feedback.py  test_filters.py  test_gemini_client.py  test_geocode_cache.py  test_health_monitor.py  test_keyboards.py  test_kpi_callbacks.py  test_kpi_keyboards.py  test_kpi_queries.py  (+25 more)
(+47 files in other folders)
